pom is modified