@@ -1,5 +1,4 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-<<<<<<< HEAD
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
@@ -123,136 +122,6 @@
         -->
     </build>
     <dependencies>
-=======
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-
-  <groupId>com</groupId>
-  <artifactId>Airbnb-java-selenium-testng</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <packaging>jar</packaging>
-
-  <name>Airbnb-java-selenium-testng</name>
-  <url>http://maven.apache.org</url>
-
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <aspectj.version>1.8.10</aspectj.version>
-  </properties>
-  
-  <build>
-		<plugins>
-			<!-- First plugin #1 -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
-				</configuration>
-			</plugin>
-			
-			<!-- Second plugin #2 -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.20</version>
-				<configuration>
-					
-					<forkCount>2</forkCount>
-					<reuseForks>true</reuseForks>
-					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
-					<!-- System properties -->
-					<!--   
-					<systemPropertyVariables>
-						<property>
-							<name>browserName</name>
-							<value>${browserName}</value>
-						</property>
-						<property>
-							<name>url</name>
-							<value>${url}</value>
-						</property>
-					</systemPropertyVariables>
-					-->
-					<suiteXmlFiles>
-						<suiteXmlFile>src/main/java/resources/testrunner/test-smoke.xml</suiteXmlFile>
-						<suiteXmlFile>src/test/java/resources/testrunner/test-functional.xml</suiteXmlFile>
-						<suiteXmlFile>src/test/java/resources/testrunner/test-regression.xml</suiteXmlFile>
-						<!-- <suiteXmlFile>src/test/java/resources/testrunner/test-all.xml</suiteXmlFile> -->
-					</suiteXmlFiles>
-
-					<argLine>
-						-javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
-					</argLine>
-
-				</configuration>
-				<dependencies>
-					<dependency>
-						<groupId>org.aspectj</groupId>
-						<artifactId>aspectjweaver</artifactId>
-						<version>${aspectj.version}</version>
-					</dependency>
-				</dependencies>
-			</plugin>
-			
-			<!-- Third plugin #3 -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-source-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>attach-sources</id>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-
-			<!-- Fourth plugin #4 -->
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.7.0</version>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-				</configuration>
-			</plugin>
-
-		</plugins>
-
-		<resources>
-			<resource>
-				<directory>src/main/java/resources/testrunner</directory>
-				<filtering>true</filtering>
-			</resource>
-		</resources>
-
-	</build>
-
-  <dependencies>
-    
-     <dependency>
-    	<groupId>org.seleniumhq.selenium</groupId>
-			<artifactId>selenium-java</artifactId>
-			<version>3.14.0</version>
-		</dependency>
- 
-		<dependency>
-		    <groupId>org.testng</groupId>
-		    <artifactId>testng</artifactId>
-		    <version>6.14.3</version>
-		    <scope>compile</scope>
-		</dependency>
-<!-- 
-		<dependency>
-		    <groupId>org.apache.maven.plugins</groupId>
-		    <artifactId>maven-compiler-plugin</artifactId>
-		    <version>3.8.1</version>
-	    </dependency>
--->    
->>>>>>> master
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
